Year 2023, Day 9 linear solution added